2009-10-05  Jerry James  <james@xemacs.org>

	* glyphs.el (make-image-specifier): Remove ancient comment about
	lack of support for animated GIFs.

2009-10-03  Aidan Kehoe  <kehoea@parhasard.net>

	* cl-macs.el (delete-duplicates): 
	Make this compiler macro aware that CL-SEQ is a sequence, which
	may not necessarily be a list.

2009-09-30  Mike Sperber  <mike@xemacs.org>

	* lisp.el (beginning-of-defun-raw): Unbreak; clean up sloppy
	coding.

2009-09-28  Mike Sperber  <mike@xemacs.org>

	* autoload.el (make-autoload): Only try to add arguments to
	documentation when the form actually allows it.

	* cl-macs.el (cl-function-arglist): Add autoload; used in autoload.el.

2009-09-27  Aidan Kehoe  <kehoea@parhasard.net>

	* cus-edit.el (custom-variable-prompt): 
	nil is a symbol, check that variable-at-point is non-nil before
	checking if it's a symbol when deciding on the prompt used in this
	function. 

2009-09-22  Andreas Roehler  <andreas.roehler@online.de>

	* lisp.el (beginning-of-defun-raw):
	new variable: beginning-of-defun-function, 
	beginning-of-defun may call FUNCTION determining start position
	* lisp.el (end-of-defun):
	new variable: end-of-defun-function,	
	end-of-defun may call FUNCTION determining the end position

2009-09-20  Aidan Kehoe  <kehoea@parhasard.net>

	Add arglist information to docstrings for autoloaded functions and
	macros.
	* hyper-apropos.el (hyper-apropos-get-doc): 
	Treat autoload docstrings like subr docstrings; correct the regexp
	used.
	* help.el (describe-function-show-arglist): 
	This no longer treats autoloads specially. 
	(function-arglist): Treat autoload docstrings like subr docstrings. 
	(function-documentation): Treat documentation strings that are
	zero-length after the arglist has been removed as indicating a
	lack of documentation.
	* cl-macs.el (case): 
	(ecase): 
	(typecase): 
	(etypecase): 
	(block): 
	(return): 
	(return-from): 
	(progv): 
	(lexical-let): 
	(lexical-let*): 
	(remf): 
	(callf): 
	(callf2): 