@@ -1,3 +1,14 @@
+2009-10-05  Jerry James  <jamesjer@xemacs.org>
+
+	* gtk/event-stream-tests.el: Add GPL v2 or later notice with
+	explicit permission of Bill Perry (private email).
+	* gtk/gnome-test.el: Ditto.
+	* gtk/gtk-embedded-test.el: Ditto.
+	* gtk/gtk-extra-test.el: Ditto.
+	* gtk/statusbar-test.el: Ditto.
+	* gtk/toolbar-test.el: Ditto.
+	* gtk/xemacs-toolbar.el: Ditto.
+
 2009-09-19  Aidan Kehoe  <kehoea@parhasard.net>
 
 	* automated/mule-tests.el: 
